Macro/skim/logs/19545448_12.err
input_line_9:2:37: error: expected expression
 FlatMix(12*100000, (12+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                    ^
